Fix Launch challenge setting dates overlapping issue
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@241624 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/direct/launchcontest.css
+++ b/src/web/css/direct/launchcontest.css
@@ -1942,6 +1942,14 @@
 	z-index:100;
 	background:url(/images/timeSelect.gif) no-repeat;
 	}
+
+    #checkPointEndDateDiv .newListSelected {
+        z-index: 101;
+    }
+
+    .startEtSelect .newListSelected {
+        z-index: 102;
+    }
 	
 	.startEtSelect .selectedTxt,.checkpointEtSelect .selectedTxt,.endEtSelect .selectedTxt{
 		width:49px;
